# django-routify

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: beta.yml  release.yml  test.yml
examples/example/example/: settings.py  urls.py
examples/example/example_app/: forms.py  tests.py  urls.py  views.py
examples/example/example_app/templates/: form.html  template.html
src/django_routify/: __init__.py  _abstraction.py  _utils.py  include.py  patterns.py  router.py  validator.py
tests/: __main__.py  urls.py  utils.py  views.py
tests/dynamic_url_patterns_tests/: urls.py  views.py
tests/single_method_decorators_tests/: urls.py  views.py
tests/trailing_slash_tests/: views.py
