[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "django-routify"
version = "0.2.2"
description = "Django-Routify is a package for simple routing Views in the classic Django framework."

readme = "README.md"
requires-python = ">=3.8"

license = {file = "LICENSE"}

keywords = [
    "django-routify",
    "django routify",
    "django-router",
    "django router",
    "router for django",
    "router",
    "routify",
]

authors = [
    {name="Vitaliy Popel", email="popelcompany@gmail.com"}
]
maintainers = [
    {name="Vitaliy Popel", email="popelcompany@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "django>4.0"
]

[project.urls]
"Homepage" = "https://github.com/vitaliypopel/django-routify"
"Bug reports" = "https://github.com/vitaliypopel/django-routify/issues"
"Source" = "https://github.com/vitaliypopel/django-routify/"
