[tool.poetry]
name = "django-routify"
version = "0.2.5"
description = "Django-Routify is a package for simple routing Views in the classic Django framework."
authors = ["Vitaliy Popel <popelcompany@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vitaliypopel/django-routify"
repository = "https://github.com/vitaliypopel/django-routify"
documentation = "https://github.com/vitaliypopel/django-routify"
keywords = [
    "django-routify",
    "django routify",
    "django-router",
    "django router",
    "router for django",
    "router",
    "routify",
]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
