[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "django-routify"
version = "0.3.4"
description = "Django-Routify is a package for simple routing Views in the classic Django framework."

readme = "README.md"
requires-python = ">=3.8"

license = {file = "LICENSE"}

keywords = [
    "django-routify",
    "django routify",
    "django-router",
    "django router",
    "router for django",
    "router",
    "routify",
]

authors = [
    {name="Vitaliy Popel", email="popelcompany@gmail.com"}
]
maintainers = [
    {name="Vitaliy Popel", email="popelcompany@gmail.com"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    "License :: OSI Approved :: MIT License",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",

    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",

    "Environment :: Web Environment",

    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",

    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Topic :: System :: Networking",
    "Topic :: Utilities",

    "Typing :: Stubs Only",
    "Typing :: Typed",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14", # soon
    "Programming Language :: Python :: 3 :: Only",

    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "django>=4.0"
]

[project.urls]
"Homepage" = "https://github.com/vitaliypopel/django-routify"
"Documentation" = "https://vitaliypopel.github.io/django-routify-docs/homepage"
"Bug reports" = "https://github.com/vitaliypopel/django-routify/issues"
"Source" = "https://github.com/vitaliypopel/django-routify/"